Refactored a bunch of the js code.

--- a/app/ui/static/index.html
+++ b/app/ui/static/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="js/lib.js"></script>
     <script src="js/main.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC|Rye" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
