Surfacing ab log data.

--- a/app/ui/static/advanced.html
+++ b/app/ui/static/advanced.html
@@ -47,6 +47,7 @@
         <div id="gkelist"  class="layer">
 
         </div>
+        <button id="showgke">Reports</button>
         <h1 id="load_url">http://[a totally real app].appspot.com</h1>
         <h2>Go on App Engine</h2>
         <div id="gaelist"  class="layer">
